--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    sourceSets {
+        main {
+            jni {
+                srcDirs 'src\\main\\jni', 'src\\main\\jnilibs'
+            }
+        }
+    }
 }
 
 dependencies {
@@ -42,6 +49,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-database:20.0.4'
     implementation 'androidx.navigation:navigation-fragment:2.4.2'
+    implementation project(path: ':OpenCV4')
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.firebaseui:firebase-ui-database:8.0.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
